--- a/_learning/@5/index.html
+++ b/_learning/@5/index.html
@@ -16,6 +16,6 @@
 <body>
     <canvas id="a">
     </canvas>
-    <script src="./circle.js"></script>
+    <script src="./arctangent.js"></script>
 </body>
 </html>
