Add before and after functions to test module.

--- a/_learning/@6/index.html
+++ b/_learning/@6/index.html
@@ -16,7 +16,8 @@
 <body>
     <canvas id="a">
     </canvas>
-    <script src="./vectors.js"></script>
+    <script src="../globals/vectors.js"></script>
+    <script src="../globals/test.js"></script>
     <script src="./main.js"></script>
 </body>
 </html>
