--- a/_learning/@8/index.html
+++ b/_learning/@8/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>1</title>
+  <title>Velocity</title>
   <style>
     body, html {
       margin: 0;
@@ -12,12 +12,13 @@
       display: block;
     }
   </style>
+  <script src="../globals/vector.js"></script>
+  <script src="../globals/particle.js"></script>
+  <script src="../globals/test.js"></script>
 </head>
 <body>
     <canvas id="a">
     </canvas>
-    <script src="../globals/vector.js"></script>
-    <script src="../globals/test.js"></script>
-    <script src="./main.js"></script>
+    <script src="./accel.js"></script>
 </body>
 </html>
