--- a/_learning/@8.5/index.html
+++ b/_learning/@8.5/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>1</title>
+  <title>Fireworks</title>
   <style>
     body, html {
       margin: 0;
@@ -14,10 +14,9 @@
   </style>
 </head>
 <body>
-    <canvas id="a">
-    </canvas>
-    <script src="../globals/vector.js"></script>
-    <script src="../globals/test.js"></script>
-    <script src="./main.js"></script>
+  <canvas id="a"></canvas>
+  <script src="../globals/vector.js"></script>
+  <script src="../globals/particle.js"></script>
+  <script src="fireworks.js"></script>
 </body>
 </html>
