--- a/@branches/index.html
+++ b/@branches/index.html
@@ -75,7 +75,7 @@ onload = function update() {
     H = b.height = 512;
     W = b.width = 0 | H * innerWidth / innerHeight;
     c.translate(W/2, H/2);
-    c.shadowBlur = 16;
+    // c.shadowBlur = 16;
     vines.forEach(function(v){
         c.shadowColor =
         c.strokeStyle = 'hsl('+(v.a*60|0)+',100%,'+ (60+v.w*5)+'%)';
