--- a/_learning/minis/normalizeEx/index.html
+++ b/_learning/minis/normalizeEx/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Ship</title>
+  <title>Mini-Graph</title>
   <style>
     body, html {
       margin: 0;
